Fix word wrap in links on lessons

--- a/app/assets/stylesheets/application/lessons.scss
+++ b/app/assets/stylesheets/application/lessons.scss
@@ -228,7 +228,7 @@
     z-index: 0;
 
     a {
-      word-wrap: break-word;
+      word-break: break-word;
     }
 
     h3 {
